entry -> post, entries -> posts, item -> post, items -> posts, pick -> add

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -279,7 +279,7 @@ buttons.page.introduction            = On this page you can download the <em>{0}
 buttons.page.introduction.short      = Here, you can download <span class="addonhint">the <em>browser addons</em> and </span><em>bookmarklets</em> that ease posting web pages and publications. Further, for webmasters, we offer two <em>JavaScript snippets</em> to be incorporated into existing web pages.
 buttons.select_code                  = select code
 buttons.shortcut_bibtex              = Shortcut for posting publication references
-buttons.shortcut_bibtex_end          = Then you just need to select (highlight) a publicatio entry you find on a web page and after clicking on the button the entry will be stored in {0}. 
+buttons.shortcut_bibtex_end          = Then you just need to select (highlight) a publication entry you find on a web page and after clicking on the button the entry will be stored in {0}. 
 buttons.shortcut_bookmarks           = Shortcut for posting bookmarks
 buttons.shortcut_bookmarks_end       = Whenever you are on an interesting webpage, you cn just click this button. You are asked to type in some tags, and the bookmark is automatically added to your collection. 
 buttons.shortcut_login_one           = If you were 
@@ -473,7 +473,7 @@ discussion.byGroup            = show posts recently discussed by members of {0}
 discussion.byGroup.help       = show bookmarks and publications recently commented or reviewed by members
 discussion.byUser             = show posts recently discussed by {0}
 discussion.byUser.help        = show bookmarks and publications recently commented or reviewed by {0}
-discussion.info               = On this page you can rate and comment this {0}. You can also create links to other entries.
+discussion.info               = On this page you can rate and comment this {0}. You can also create links to other posts.
 discussion.info.bookmark      = bookmark
 discussion.info.bookmarks     = The link has following syntax:  (url|bookmark)/hash(/username)?
 discussion.info.examples      = Example to create an link: you must mark your link with [[...]]
@@ -568,7 +568,7 @@ error.field.valid.alreadyStoredCommunityPost = A community post with that data a
 error.field.valid.alreadyStoredPublication   = You already have this publication in your collection.
 error.field.valid.authorOrEditor             = Please enter authors or editors for this publication.
 error.field.valid.authorOrEditor.parseError  = The author or editor field caused the following parse error: {0}
-error.field.valid.bibtexKey                  = Please enter a valid key for your entry. The key might not contain whitespace.
+error.field.valid.bibtexKey                  = Please enter a valid key for your post. The key might not contain whitespace.
 error.field.valid.bibtexKey.generation       = Could not generate BibTeX key, since neither author, nor year, nor title were given. Please fill one of the form fields first.
 error.field.valid.captcha                    = Please enter the displayed words into the form.
 #  
@@ -647,12 +647,12 @@ error.rename.failed                          = The file rename could not be fini
 error.report                                 = report error
 error.scrape.failed                          = Could not scrape the URL {0}. Message was: {1}
 error.scrape.nothing                         = The URL {0} is currently not supported by one of our scrapers.
-error.search_more_than_one_group             = Sorry, you can search only within the entries of ONE group.
-error.search_more_than_one_user              = Sorry, you can search only within the entries of ONE user.
+error.search_more_than_one_group             = Sorry, you can search only within the posts of ONE group.
+error.search_more_than_one_user              = Sorry, you can search only within the posts of ONE user.
 error.search_page_without_search             = Sorry, this page does not exist on our server. If you want to access a search page, please specify your search like /search/SEARCHTERM.
 error.secure.answer                          = Type in "yes" to delete your account.
 error.service_unavailable                    = Service unavailable. Retry after {0} seconds.
-error.settings.list_item_count.size          = The maximum number of items per page is {0}.
+error.settings.list_item_count.size          = The maximum number of posts per page is {0}.
 error.settings.password.empty                = the password field is empty
 error.settings.password.incorect             = incorrect password
 error.settings.password.ldap                 = You are logged in using LDAP and thus don't have a password you could change.
@@ -1119,7 +1119,7 @@ navi.classifier_spammer          = Classifier: Spammer
 navi.classifier_spammer_unsure   = Classifier: Spammer (U)
 navi.clipboard                   = clipboard
 navi.clipboard.empty             = your clipboard is empty
-navi.clipboard.inactive          = Sign in to see your picked items.
+navi.clipboard.inactive          = Sign in to see the posts in your clipboard.
 navi.concept                     = concept
 navi.concept.hint                = concept tag(s)
 navi.concepts                    = concepts
@@ -1175,7 +1175,7 @@ navi.inInbox                     = there are {0} posts in your inbox
 navi.inInbox.singular            = there is one post in your inbox
 navi.inbox                       = inbox
 navi.inbox.empty                 = your inbox is empty
-navi.inbox.inactive              = Sign in to see your inbox items.
+navi.inbox.inactive              = Sign in to see your inbox posts.
 navi.infobox                     = info
 navi.join                        = Join Group {0}
 navi.loggedInAs                  = logged in as
@@ -1460,7 +1460,7 @@ post.description                                        = description, comment
 post.description.help                                   = A short personal description or comment (publicly viewable).
 # Post edit
 post.edit.existent                                      = You are editing an existing post.
-post.edit.existent.help                                 = The entry you posted already exists in your repository. You are now editing this version of the post.
+post.edit.existent.help                                 = The post you posted already exists in your repository. You are now editing this version of the post.
 post.edit.spam_note                                     = The captcha is shown only to those users who have been flagged by our automatic spam classification system. Normally, those users post advertisements or illegal content.\r\nUnfortunately from time to time, one of our regular users is accidentally flagged.\r\nPlease inform us, if you feel that you have been misclassified. Just send an e-mail\r\nto  <a href="mailto:{1}?subject={0}">{1}</a> and we will correct our mistake. We apologize for any inconvenience.\r\n
 post.groups.friends                                     = friends
 post.groups.private                                     = private
@@ -1468,7 +1468,7 @@ post.meta.add                                           = add
 post.meta.advanced                                      = advanced
 post.meta.asGroup                                       = for
 post.meta.asPrivate                                     = as
-post.meta.batch_edit                                    = edit own entries
+post.meta.batch_edit                                    = edit own posts
 post.meta.changedOn                                     = changed on
 post.meta.copy_this_post                                = Copy this post.
 post.meta.display                                       = display
@@ -1803,7 +1803,7 @@ post_bookmark.heading     = Enter your bookmark data here
 
 posts = posts
 
-posts.no_matching_entries = No matching items.
+posts.no_matching_entries = No matching posts.
 posts.refresh             = refresh posts
 
 preview = preview
@@ -2110,7 +2110,7 @@ settings.jabRef.end                                         = end.layout (option
 settings.jabRef.end.help                                    = appears at the end of the output (optional)
 settings.jabRef.explain                                     = For an explanation on how to write such export filters, have a look at the <a href="http://jabref.sourceforge.net/help/CustomExports.php">the JabRef page</a>. You (and only you!) can use these layouts to show your publication lists in a format of your choice. After uploading the correct file(s) have a look at my {0} to see how it looks.
 settings.jabRef.item                                        = item.layout
-settings.jabRef.item.help                                   = used to render each publication item
+settings.jabRef.item.help                                   = used to render each publication post
 settings.jabRef.layoutfile                                  = JabRef layout file
 settings.layout                                             = layout
 settings.layout.help.bootstrap                              = {0}: The new layout offers a more intuitive handling.
@@ -2166,7 +2166,7 @@ settings.synchronization.header                             = Synchronization se
 settings.synchronization.save                               = Save
 settings.tag.defaultLanguage                                = language
 settings.tag.defaultLanguage.help                           = your default language
-settings.tag.itemsPerPage                                   = items per page
+settings.tag.itemsPerPage                                   = posts per page
 settings.tag.itemsPerPage.help                              = maximum number of posts shown per page
 settings.tag.maxCountminFreq                                = choice of tags
 settings.tag.maxCountminFreq.help                           = the tags that are displayed in a tagcloud are selected according to your choice:
