--- a/bibsonomy-webapp/src/main/resources/themes/puma_messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/themes/puma_messages_de.properties
@@ -43,7 +43,7 @@ post.resource.openaccess.additionalfields.sponsor.help           = Sponsoren (DF
 post.resource.openaccess.authorcontractconfirm                   = Ja, ich habe alle Daten korrekt ausgef\u00FCllt und m\u00F6chte die Publikation an das institutionelle Repositorium \u00FCbermitteln. Mir ist bewusst, dass ich die Metadaten und das Dokument nicht mehr \u00E4ndern kann oder entfernen lassen kann, sobald das Dokuemnt ver\u00F6ffentlicht wurde.
 post.resource.openaccess.classification.description              = Diese Publikation wird bei einer spezifischen Themensuche durch Ihre Klassifikationszuordnung ber\u00FCcksichtigt.
 post.resource.openaccess.classification.headline                 = Klassifikationen
-post.resource.openaccess.description                             = Sie haben diese Publikation als ihre eigene angemeldet (System-Tag "myown"). Einer der Autoren (z.B. der Erstautor) kann die Publikation an unser Repository senden\n
+post.resource.openaccess.description                             = Sie haben diese Publikation als ihre eigene getaggt (System-Tag <span class="label label-primary">myown</span>). Einer der Autoren (z.B. der Erstautor) kann die Publikation an unser Repository senden\n
 post.resource.openaccess.headline                                = Institutsrepositorium
 post.resource.openaccess.noinfoavailable                         = keine Informationen verf\u00FCgbar
 post.resource.openaccess.sherparomeo.color.description.blue      = can archive post-print (ie final draft post-refereeing) or publisher's version/PDF
@@ -67,4 +67,4 @@ system.about        = {0} unterst\u00FCtzt Sie gezielt und einfach bei Ihrer Arb
 system.desc         = Akademisches Publikationsmanagement<br />Publikationen sammeln, verwalten und teilen.
 system.groups       = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie in der <a href="http://puma.ub.uni-stuttgart.de/help_de/Gruppen%20f\u00FCr%20gemeinsame%20%28Lese-%29Interessen%20finden%20und%20beitreten">Hilfe</a>.
 system.introduction = Nutzen Sie die M\u00F6glichkeiten und <a href="login">loggen</a> Sie sich jetzt mit Ihrem Bibliotheksdaten ein oder st\u00F6bern Sie ein wenig auf unseren Seiten.
-system.offeredBy    = {0} wird von {1} betrieben.
+system.offeredBy    = PUMA wird von der <a href="http://www.ub.uni-kassel.de/">Universit\u00E4tsbibliothek</a> der Universit\u00E4t Kassel betrieben und zusammen mit dem <a href="http://www.kde.cs.uni-kassel.de/">Fachgebiet Wissensverarbeitung</a> in Kassel und der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg entwickelt.
