added layout settings for home header (used by UB Stuttgart)

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2245,7 +2245,9 @@ synchronization.syncThis                             = synchronisieren
 synchronization.synchronize                          = jetzt synchronisieren
 
 system.about                             = Mit {0} lassen sich einfach und komfortabel Lesezeichen und Publikationen online verwalten und teilen. \n\nWarum nicht einfach mitmachen und interessante Webseiten und Publikationen <a href="/help_de/Literaturverweise%20und%20Lesezeichen%20hinzuf\u00C3\u00BCgen%20und%20auswerten">sammeln, verwalten</a> und <a href="/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren">diskutieren</a>?
-system.about.bs                          = <h2>Der einfache Weg zum Verwalten wissenschaftlicher Publikationen und Lesezeichen</h2>\n\n<p>{0} hilft Ihnen beim Verwalten Ihrer Publikationen und Lesezeichen, bei der Zusammenarbeit mit Kollegen und beim Finden neuer interessanter Sachen f\u00FCr Ihre Forschung.</p>
+system.about.bs                          = <p></p>
+system.about.bs.headline                 = Der einfache Weg zum Verwalten wissenschaftlicher Publikationen und Lesezeichen
+system.about.bs.lead                     = {0} hilft Ihnen beim Verwalten Ihrer Publikationen und Lesezeichen, bei der Zusammenarbeit mit Kollegen und beim Finden neuer interessanter Sachen f\u00FCr Ihre Forschung.
 system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
