person.newthesis.default.tag needs to stay 'genealogie' for consistency reasons.
Applying translations to 'brand name' was approved. However, default tag needs to stay genealogie to be consistent with all previous tagged resources.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1305,7 +1305,7 @@ person.new.newPersonButton                        = New person
 person.new.personPanelHeader                      = About this person
 person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
-person.newthesis.default.tag                      = genealogy
+person.newthesis.default.tag                      = genealogie
 person.show.B1st                                  = First reviewer
 person.show.B1st.of                               = , first reviewer of
 person.show.B1stTooltip                           = First reviewer of the dissertation
