info button next to search bar

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1987,6 +1987,8 @@ scraper_info.scraper_help_link        = /help/Scraper
 scraper_info.scraper_link_description = The following list contains all supported catalogs whose publications can be extracted for you with the <a href="/buttons">"postPublication"-Button or the Browser extensions</a>. The links make a good starting point for importing publications of interests into {0}.
 scraper_info.title                    = scraper info
 
+search.info.text = 	search options
+search.info.url = 	/help_en/SearchPageHelp
 search.invalid.query = Your search query was invalid. Please check your search query for invalid characters and try again. 
 
 selection = snippet
