Big cleanup and some code review.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -872,7 +872,7 @@ group.description.headline                               = description
 group.description.help                                   = a short description of the group
 group.doesnotexist.header                                = group does not exist
 group.groupRequest.adminName                             = group admin user
-group.groupRequest.adminName.helptext                    = Enter the username of the user, that should be administrator of the newly created group. 
+group.groupRequest.adminName.helptext                    = Enter the username of the user, that should be administrator of the new group. 
 group.groupRequest.description                           = Here you can request a new group. Please enter the desired name of the group and the main purpose of the group you request. We will inform you as soon as a system administrator approved your group.
 group.groupRequest.reason                                = reason for request
 group.groupRequest.reason.help                           = the reason why you need the group
