--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1270,7 +1270,7 @@ person.new.newPersonButton                        = Neue Person
 person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
-person.newthesis.default.tag                      = Genealogie
+person.newthesis.default.tag                      = genealogie
 person.show.B1st                                  = Erstgutachter_in
 person.show.B1st.of                               = , Erstgutachter_in von
 person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
@@ -1937,7 +1937,6 @@ scraper_info.title                    = Information zu Scrapern
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Schnipsel
-
 selection.help = F\u00FCgen Sie hier Ihren BibTeX oder EndNote Schnipsel ein.
 
 settings.aboutMe                                            = \u00DCber mich
