fixed group creation decline subject message

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1015,7 +1015,7 @@ mail.group.activation.body           = Hallo {0}!\n\nIhre Gruppe {1} wurde erste
 mail.group.activation.subject        = Ihre Gruppe {1} wurde erstellt!
 mail.group.decline                   = 
 mail.group.decline.body              = Hallo {0}!\n\nIhre Antrag auf Erstellung der Gruppe {1} wurde abgelehnt.\n\n{2}\n\nAntworten an diese E-Mail-Adresse werden gel\u00F6scht, bitte senden Sie Fragen an {4}.
-mail.group.decline.subject           = Ihre Gruppe {1} wurde erstellt!
+mail.group.decline.subject           = Ihre Gruppenerstellungsanfrage wurde abgelehnt!
 mail.groupInvite.body                = \nHallo {0}!\n\nBenutzer {1} hat Sie eingeladen, der Gruppe {2} beizutreten.\n\nBesuchen Sie {8}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
 mail.groupInvite.subject             = Beitrittseinladung zur Gruppe {2}
 mail.joinGroupRequest.body           = \nHallo {0}!\n\nBenutzer {1} bittet um Erlaubnis, Ihrer Gruppe beitreten zu d\u00FCrfen.\n\nBegr\u00FCndung: {2}\n\nBesuchen Sie {8}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
@@ -1937,6 +1937,7 @@ scraper_info.title                    = Information zu Scrapern
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Schnipsel
+
 selection.help = F\u00FCgen Sie hier Ihren BibTeX oder EndNote Schnipsel ein.
 
 settings.aboutMe                                            = \u00DCber mich
