--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1059,7 +1059,7 @@ mail.group.activation.body           = Hello {0}!\n\nYour group {1} has been cre
 mail.group.activation.subject        = Your group {1} has been created!
 mail.group.decline                   = 
 mail.group.decline.body              = Hello {0}!\n\nYour request for creating the group {1} has been declined.\n\n{2}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
-mail.group.decline.subject           = Your group {1} has been created!
+mail.group.decline.subject           = Your group creation request has been declined!
 mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {8}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.groupInvite.subject             = Group invitation to {2}
 mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has sent a request to join your group.\n\nReason: {2}\n\nVisit {8}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
