fixed link to sorting publications help page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1479,7 +1479,7 @@ post.edit.spam_note                                     = The captcha is shown o
 post.groups.friends                                     = friends
 post.groups.private                                     = private
 post.meta.add                                           = add
-post.meta.advanced                                      = advanced
+post.meta.advanced                                      = help for advanced sorting
 post.meta.asGroup                                       = for
 post.meta.asPrivate                                     = as
 post.meta.batch_edit                                    = edit own posts
@@ -1493,6 +1493,7 @@ post.meta.edit.title                                    = edit the details of al
 post.meta.filter                                        = filter
 post.meta.flag_as_spam                                  = spam
 post.meta.flag_as_spam.title                            = Mark this post as spam
+post.meta.helplink										= /help_en/Sorting%20Publications
 post.meta.kill_spammer                                  = KillSpammer!
 post.meta.others                                        = others
 post.meta.own_post                                      = You already own this post.
