--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1429,7 +1429,7 @@ post.edit.spam_note                                     = Das Captcha wird einem
 post.groups.friends                                     = Freunde
 post.groups.private                                     = Privat
 post.meta.add                                           = Hinzuf\u00FCgen  
-post.meta.advanced                                      = erweitert
+post.meta.advanced                                      = Hilfe f\u00FCr erweiterte Sortierung
 post.meta.asGroup                                       = f\u00FCr
 post.meta.asPrivate                                     = als
 post.meta.batch_edit                                    = Eigene Eintr\u00E4ge bearbeiten
@@ -1443,6 +1443,7 @@ post.meta.edit.title                                    = Alle eigenen Eintr\u00
 post.meta.filter                                        = Filtern
 post.meta.flag_as_spam                                  = Spam
 post.meta.flag_as_spam.title                            = Diesen Eintrag als Spam markieren
+post.meta.helplink										= /help_de/Sorting%20Publications
 post.meta.kill_spammer                                  = KillSpammer!
 post.meta.others                                        = Sonstiges
 post.meta.own_post                                      = Sie besitzen dieses Eintrag bereits.
