removed old recaptcha in favour of recaptcha2

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -571,7 +571,7 @@ error.field.valid.authorOrEditor             = Please enter authors or editors f
 error.field.valid.authorOrEditor.parseError  = The author or editor field caused the following parse error: {0}
 error.field.valid.bibtexKey                  = Please enter a valid key for your post. The key might not contain whitespace.
 error.field.valid.bibtexKey.generation       = Could not generate BibTeX key, since neither author, nor year, nor title were given. Please fill one of the form fields first.
-error.field.valid.captcha                    = Please enter the displayed words into the form.
+error.field.valid.captcha                    = Please verify that you are a human.
 #  
 error.field.valid.ckey                       = The provided security token is invalid.
 error.field.valid.comment.text               = Please enter a comment.
