removed ADD_INVITED_SPAMMER update operation
spammer can't be invited to groups

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -879,6 +879,7 @@ group.groupRequest.reason.help                           = the reason why you ne
 group.groupRequest.userName                              = username
 group.joinDate                                           = join date
 group.leave                                              = leave group
+group.member.invite.spammer                              = You cannot invite the user "{0}" to this group. The user is currently marked as spammer. Please <a href="mailto:{1}?subject=User ''{0}'' marked as spammer">contact the system administrator</a>.
 group.memberOf                                           = member
 group.name                                               = name
 group.name.help                                          = the name of the group
