--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -837,6 +837,7 @@ group.groupRequest.reason.help                           = Der Zweck zudem die G
 group.groupRequest.userName                              = Benutzername
 group.joinDate                                           = Beitrittsdatum
 group.leave                                              = Gruppe verlassen
+group.member.invite.spammer                              = Sie k\u00F6nnen den Benutzer "{0}" nicht zu dieser Gruppe einladen. Der Benutzer ist momentan als Spammer markiert. Bitte setzen Sie sich <a href="mailto:{1}?subject=User ''{0}'' marked as spammer">mit dem Systemadministrator in Verbindung</a>.
 group.memberOf                                           = Mitglied
 group.name                                               = Kurzname
 group.name.help                                          = der Name der Gruppe
