--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -834,6 +834,7 @@ group.groupRequest.reason                                = \u041E\u0431\u043E\u0
 group.groupRequest.reason.help                           = \u041F\u0440\u0438\u0447\u0438\u043D\u0430, \u043F\u043E \u043A\u043E\u0442\u043E\u0440\u043E\u0439 \u0412\u0430\u043C \u043D\u0443\u0436\u043D\u0430 \u0433\u0440\u0443\u043F\u043F\u0430
 group.groupRequest.userName                              = \u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 group.leave                                              = \u041F\u043E\u043A\u0438\u043D\u0443\u0442\u044C \u0433\u0440\u0443\u043F\u043F\u0443
+group.member.invite.spammer                              = 
 group.memberOf                                           = \u0447\u043B\u0435\u043D
 group.name                                               = \u043A\u0440\u0430\u0442\u043A\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 group.name.help                                          = \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
