fixed worldcat author pattern
working on #2436

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISSNScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISSNScraperUnitURLTest1.bib
@@ -1,5 +1,6 @@
-@misc{noauthororeditor0000abhandlungen,
+@misc{hamburg0000abhandlungen,
 address = {Berlin},
+author = {Universität Hamburg and Mathematisches Seminar},
 issn = {00255858},
 journal = {Abhandlungen aus dem Mathematischen Seminar der Hamburgischen Universitaet.},
 publisher = {Springer.},
