modal instead of new page

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1549,7 +1549,7 @@ post.resource.discussion.discussionUser.two             = {0} und {1} haben eine
 post.resource.discussion.headline                       = Diskussion
 post.resource.discussion.help                           = Tragen Sie Ihre Rezension bzw. Ihren Kommentar in das Textfeld ein. Wenn Sie diese Resource rezensieren, k\u00F6nnen Sie sie mit einer Wahl von bis zu 5 Sternen bewerten (0.0 niedrigster, 5.0 h\u00F6chster Wert).
 post.resource.discussion.info                           = Dieser Beitrag wurde gel\u00F6scht.
-post.resource.discussion.loginToDiscuss                 = Bitte <a href="/login" title="anmelden">melden Sie sich an</a> um selbst Rezensionen oder Kommentare zu erstellen.
+post.resource.discussion.loginToDiscuss                 = Bitte <a data-toggle="modal" data-target="#loginModal" title="anmelden">melden Sie sich an</a> um selbst Rezensionen oder Kommentare zu erstellen.
 post.resource.discussion.rating.disabled                = Sie schreiben gerade einen Kommentar. Bewertung sind nur f\u00FCr Rezensionen gedacht. Sie k\u00F6nnen maximal eine Rezension f\u00FCr diese Resource erstellen. Eine Rezension kann nicht eine Antwort zu einer anderen Rezension oder einem Kommentar sein.
 post.resource.discussion.replies.hide                   = Antworten ausblenden
 post.resource.discussion.replies.hide.title             = Alle folgenden Kommentare und Rezensionen werden nicht mehr angezeigt.
