missing href attribute

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1599,7 +1599,7 @@ post.resource.discussion.discussionUser.two             = {0} and {1} have writt
 post.resource.discussion.headline                       = discussion
 post.resource.discussion.help                           = Enter your review or comment into the text field. If you want to review this publication you may choose up to five stars to rate it (0.0 is lowest, 5.0 is best).
 post.resource.discussion.info                           = This discussion item was deleted.
-post.resource.discussion.loginToDiscuss                 = Please <a data-toggle="modal" data-target="#loginModal" title="log in">log in</a> to take part in the discussion (add own reviews or comments).
+post.resource.discussion.loginToDiscuss                 = Please <a href="#" data-toggle="modal" data-target="#loginModal" title="log in">log in</a> to take part in the discussion (add own reviews or comments).
 post.resource.discussion.rating.disabled                = You are currently writing a comment. Ratings are only for reviews. You can only write one review for this publication. A review cannot be an answer to another review or comment.
 post.resource.discussion.replies.hide                   = hide replies
 post.resource.discussion.replies.hide.title             = Hide all following comments and reviews.
