--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest4.bib
@@ -1,7 +1,10 @@
-@book{yueting2006,
-author={Zhuang, Yueting and Yang, Shiqiang and Rui, Yong and He, QinmingER  -},
-journal={Advances in Multimedia Information Processing - PCM 2006},
-pages={--},
-url={http://dx.doi.org/10.1007/11922162},
-year={2006}
+@electronic{zhuang2006advances,
+address = {Berlin; New York},
+author = {Zhuang, Yueting},
+isbn = {9783540487692 3540487697 3540487662 9783540487661},
+publisher = {Springer},
+refid = {262694282},
+title = {Advances in multimedia information processing PCM 2006 : 7th Pacific Rim Conference on Multimedia, Hangzhou, China, November 2-4, 2006 : proceedings},
+url = {http://www.springerlink.com/link.asp?id=w425794t7433},
+year = {2006}
 }
