#2436 repair the bad-link for number 2 and contact the management of the web site (DeGruyter) to repair it internal

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DeGruyterScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DeGruyterScraperUnitURLTest.bib
@@ -5,7 +5,7 @@ doi = {10.9785/ovs-cr-2013-586},
 issn = {21944172},
 pages = {586--},
 title = {Super Marios, Kratos’ und des Master Chiefs Erzfeind – Die Legalität der Modchips und Softwaremods für Videospielkonsolen},
-url = {//www.degruyter.com/view/j/cr.2013.29.issue-9/cr.2013.29.9.586/cr.2013.29.9.586.xml},
+url = {http://www.degruyter.com/view/j/cr.2013.29.issue-9/cr.2013.29.9.586/cr.2013.29.9.586.xml},
 volume = {29},
 year = {2013}
 }
