--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest2.bib
@@ -1,7 +1,7 @@
 @electronic{cardoso2008semantic,
 abstract = {"Semantic Web: Real-World Applications from Industry offers a glimpse into the opening door of semantic technologies by means of concentrated examples of semantic applications in real business environments. For quite a while, there has been evidence from academic research and early industrial prototypes that semantic technology can help humans and machines substantially in accessing and using the unprecedented, and exponentially growing, amount of information that the World Wide Web provides. Now semantic technology is moving from academic and industrial research into real products and applications. This book provides a series of case studies which demonstrate how real benefits can be derived from the adoption of semantic technology in popular business domains, such as telecommunication, B2B integration, healthcare, education, and others." "Semantic Web: Real-World Applications from Industry summarizes state-of-the-art expertise and practical experiences from outstanding technology showcases. This volume was written as a joint effort of leading experts in the field of semantic technology from various backgrounds and countries, including industry, academic, and government agencies. It combines a detailed description of the challenges and technical solutions with a discussion of the actual results and a wealth of lessons learned, which will be invaluable for future investments into semantic technology." "Semantic Web: Real-World Applications from Industry was designed for industry professionals and researchers interested in the current state and future of semantic technology. This book is also suitable as a secondary advanced-level text or reference for students in computer science."--Jacket.},
 address = {New York},
-author = {Cardoso, Jorge and Lytras, Miltiadis D.},
+author = {Cardoso, Jorge and Hepp, Martin and Lytras, Miltiadis D.},
 isbn = {9780387485317 0387485317 9780387485300 0387485309},
 publisher = {Springer},
 refid = {191449063},
