--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest2.bib
@@ -1,4 +1,4 @@
-@article {nokey,
+@article {Hagenaars205,
 	author = {Hagenaars, T.J. and Ferguson, N.M. and Donnelly, C.A. and Ghani, A.C. and Anderson, R.M.},
 	title = {Feed-borne transmission and case clustering of BSE},
 	volume = {267},
@@ -8,7 +8,8 @@
 	doi = {10.1098/rspb.2000.0989},
 	publisher = {The Royal Society},
 	abstract = {An unresolved issue in the epidemiology of bovine spongiform encephalopathy (BSE) in the UK is what precisely determines the degree to which cases of disease in cattle are clustered within herds throughout the course of the epidemic. This paper presents an analysis of feed{\textendash}borne transmission at the herd level and tests various models of case{\textendash}clustering mechanisms, associated with heterogeneity in exposure to infectious feed, against observed epidemic pattern. We use an age{\textendash}structured metapopulation framework in which the recycling of animal tissue between herds via feed producers is explicitly described. We explore two alternative assumptions for the scaling with herd size of the within{\textendash}herd risk of exposure of an animal to infectious material. We find that whereas exposure heterogeneity caused by variation in feed and offal processing methods and by variation in per{\textendash}animal feed uptake can explain the pattern of case clustering seen in the BSE epidemic, exposure heterogeneity due to the aggregation of infectivity within feed cannot.},
-	isbn = {1471-2954},
 	issn = {0962-8452},
+	URL = {http://rspb.royalsocietypublishing.org/content/267/1440/205},
+	eprint = {http://rspb.royalsocietypublishing.org/content/267/1440/205.full.pdf},
 	journal = {Proceedings of the Royal Society of London B: Biological Sciences}
 }
