authors for amazon coming again :)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest10.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest10.bib
@@ -1,5 +1,6 @@
-@book{noauthororeditor2009sebastian,
+@book{rosentritt2009sebastian,
 address = {Hamburg},
+author = {Rosentritt, Michael},
 isbn = {9783941378285 3941378287},
 publisher = {Edel Germany GmbH},
 refid = {472484439},
