--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest2.bib
@@ -1,5 +1,6 @@
-@book{noauthororeditor2004itprojektmanagement,
+@book{mangold2004itprojektmanagement,
 address = {Heidelberg; Berlin},
+author = {Mangold, Pascal},
 isbn = {3827415020 9783827415028},
 publisher = {Spektrum, Akad. Verl.},
 refid = {76584022},
