--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest4.bib
@@ -1,6 +1,7 @@
-@book{noauthororeditor2007programmation,
+@book{vautherin2007programmation,
 abstract = {Présentation de la programmation avec Mac OS X et ses différentes versions : Tiger, Jaguar, Panther, Léopard... Détail du langage AppleScript et Cocoa, conseils d'architecture pour réaliser un logiciel plus facilement portable de Mac OS X vers les autres plates-formes.},
 address = {Paris},
+author = {Vautherin, Étienne},
 isbn = {9782100500765 2100500767},
 publisher = {Dunod},
 refid = {471004589},
