--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest8.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest8.bib
@@ -1,5 +1,6 @@
-@book{noauthororeditor2008unternehmenspraxis,
+@book{back2008unternehmenspraxis,
 address = {München},
+author = {Back, Andrea},
 isbn = {9783486585797 3486585797},
 publisher = {Oldenbourg},
 refid = {239563960},
