fixed del tilte message for removing users from groups

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2055,7 +2055,7 @@ settings.group.cv.admin.topic                               = Your <a href="{0}"
 settings.group.cv.heading                                   = edit group CV
 settings.group.delUser                                      = remove user
 settings.group.delUser.button                               = remove
-settings.group.delUser.button.title                         = Accept group membership for this user
+settings.group.delUser.button.title                         = Remove this user from this group
 settings.group.delUser.help                                 = enter the name of the user you wish to remove from the group
 settings.group.delUser.noUser                               = The group currently has no members.
 settings.group.delete                                       = delete group
