--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2006,7 +2006,7 @@ settings.group.decUser.button.title                         = Mitgliedschaftsant
 settings.group.decUser.noUser                               = Keine offenen Anfragen
 settings.group.delUser                                      = Benutzer ausschlie\u00DFen
 settings.group.delUser.button                               = Ausschlie\u00DFen
-settings.group.delUser.button.title                         = Dieser Nutzer ist Mitglied der Gruppe
+settings.group.delUser.button.title                         = Diesen Nutzer aus der Gruppe entfernen
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
 settings.group.delete                                       = Gruppe l\u00F6schen
