added config of required and optional fields while registering users (SAML)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1898,7 +1898,7 @@ register.saml.registerUser.realname = realname
 register.saml.registerUser.samlId   = user id
 register.saml.required              = Required Information
 register.saml.step2                 = Account activation
-register.saml.step2.description     = Edit profile data
+register.saml.step2.description     = Edit your profile data
 register.send                       = register
 register.signedIn                   = You have successfully signed in.
 # registration 
