fixed settings.groups.documentsharing.disabled message for german
fixed group settings button width on settings page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2135,6 +2135,7 @@ settings.group.update.success                               = Group permissions 
 settings.groups                                             = groups
 settings.groups.actions.shareDocuments                      = share
 settings.groups.documentsharing.disabled                    = disabled
+settings.groups.documentsharing.disabled.description        = The group does not allow to share documents.
 settings.groups.documentsharing.shared                      = shared
 settings.import.button                                      = import
 settings.jabRef.begin                                       = begin.layout (optional)
