--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2022,6 +2022,7 @@ settings.group.disband                                      = Gruppe aufl\u00F6s
 settings.group.disband.InfoText                             = Wenn Sie diese Gruppe l\u00F6schen, verlieren Sie alle Dokumente, die der Gruppe zugeordnet sind. 
 settings.group.disband.notEmptyInfoText                     = Sie k\u00F6nnen diese Gruppe erst l\u00F6schen, wenn Sie vorher alle anderen Mitglieder aus der Gruppe entfernen.
 settings.group.disband.yesToDeleteGroup                     = (Geben Sie {0} ein, um diese Gruppe zu l\u00F6schen)
+settings.group.editSettings                                 = Einstellungen bearbeiten
 settings.group.error.addUserToGroupFailed                   = Der Benutzer {0} konnte nicht zur Gruppe hinzugef\u00FCgt {1} werden.
 settings.group.error.alreadyInvited                         = Dieser Benutzer wurde bereits in die Gruppe eingeladen.
 settings.group.error.changeGroupRoleFailed                  = Die Gruppenrolle des Benutzers {0} konnte nicht bearbeitet werden.
@@ -2084,6 +2085,7 @@ settings.group.update.success                               = Die gruppenbasiert
 settings.groups                                             = Gruppen
 settings.groups.actions.shareDocuments                      = teilen
 settings.groups.documentsharing.disabled                    = deaktiviert
+settings.groups.documentsharing.disabled.description        = Die Gruppe erlaubt es nicht, Dokumente zu teilen.
 settings.groups.documentsharing.shared                      = aktiviert
 settings.import.button                                      = Importieren
 settings.jabRef.begin                                       = begin.layout (optional)
