--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1937,6 +1937,7 @@ settings.group.update.success                               = \u041D\u0430\u0441
 settings.groups                                             = \u0433\u0440\u0443\u043F\u043F\u044B
 settings.groups.actions.shareDocuments                      = \u0434\u0435\u043B\u0438\u0442\u044C\u0441\u044F
 settings.groups.documentsharing.disabled                    = \u0434\u0435\u0430\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D\u043E
+settings.groups.documentsharing.disabled.description        = 
 settings.groups.documentsharing.shared                      = \u0430\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D\u043E
 settings.import.button                                      = \u0438\u043C\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 settings.jabRef.begin                                       = begin.layout (\u043F\u043E \u0436\u0435\u043B\u0430\u043D\u0438\u044E)
