--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -422,7 +422,7 @@ devicesupport.deny        = verweigern
 devicesupport.description = Eine Applikation hat Ihren Benutzernamen und Ihren API Schl\u00FCssel angefordert.
 devicesupport.header      = Ger\u00E4teunterst\u00FCtzung
 
-didyouknow = Wussten Sie schon...
+didyouknow = Wussten Sie schon \u2026
 
 didyouknow.browserButtons  = Unsere Browser Add-ons helfen Ihnen beim Sammeln von Lesezeichen und Publikationen. <a href="/buttons">Erfahren Sie mehr.</a>
 didyouknow.editYourProfile = Es ist einfacher f\u00FCr Ihre Kollegen Sie zu finden, wenn Sie ihr Profil ausgef\u00FCllt haben. <a href="/settings">Mein Profil editieren.</a>
@@ -1444,7 +1444,7 @@ post.meta.edit.title                                    = Alle eigenen Eintr\u00
 post.meta.filter                                        = Filtern
 post.meta.flag_as_spam                                  = Spam
 post.meta.flag_as_spam.title                            = Diesen Eintrag als Spam markieren
-post.meta.helplink										= /help_de/Sorting%20Publications
+post.meta.helplink                                      = /help_de/Sorting%20Publications
 post.meta.kill_spammer                                  = KillSpammer!
 post.meta.others                                        = Sonstiges
 post.meta.own_post                                      = Sie besitzen dieses Eintrag bereits.
@@ -1936,8 +1936,8 @@ scraper_info.scraper_help_link        = /help_de/Scraper
 scraper_info.scraper_link_description = Im Folgenden finden Sie eine Liste aller unters\u00FCtzten Kataloge, deren Publikationen mittels des <a href="/buttons">"postPublication"-Knopfs oder der Brwoser Plugins</a> f\u00FCr Sie extrahiert werden k\u00F6nnen. Sie bilden einen guten Einstiegspunkt, um schnell die Literatureintr\u00E4ge der f\u00FCr Sie interessanten Dokumente in {0} zu \u00FCbertragen.
 scraper_info.title                    = Information zu Scrapern
 
-search.info.text = 	Suchoptionen
-search.info.url = 	/help_de/SearchPageHelp
+search.info.text     = Suchoptionen
+search.info.url      = /help_de/SearchPageHelp
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Schnipsel
